compiler/tools/fpp-check/test/component_struct_undef_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_struct_undef_type.fpp: 2.17
  struct S { x: T }
                ^
error: undefined symbol T
